<resources>
    <string name="app_name">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_android_map_api_key" translatable="false"> AIzaSyBpztnBZRSh5AdAVptgF7bst2KXS6hIzLY</string>
    <string name="location_needed">Sorry, this permission is needed to use the app</string>
    <string name="search_tag">Search places</string>
    <string name="title_activity_places">PlacesActivity</string>
    <string name="enter_name_tag">Place to search</string>
    <string name="required_permission_title">Permission required</string>
    <string name="required_permission_explanation">Functionality of this application depends completely on location permissions. Not having them makes it useless and pointless, please try it again and grant location permissions when prompted.</string>
    <string name="near_to_place_prompt">Current distance to specified location is less than your alarm distance. You don\'t need this right now, please select a farther location.</string>
    <string name="no_selected_place">You have no selected a place yet, please make a long tap anywhere on the map to place a marker.</string>
    <string name="search_hint">Enter a place to search</string>
    <string name="title_activity_search_places">SearchPlacesActivity</string>
    <string name="no_results">No results</string>
    <string name="offline_tag">(Offline mode)</string>
    <string name="offline_toast">Offline mode, address will not be saved nor shown in the marker</string>
    <string name="cannot_modify_place">You cannot change the destiny place while the service is running.</string>
    <string name="distance_format">You are %1$s from your destiny.</string>
    <string name="service_running">Tracking service running</string>
    <string name="calc_distance">Calculating distance&#8230;</string>
    <string name="mts_100">100 mts.</string>
    <string name="mts_200">200 mts.</string>
    <string name="mts_500">500 mts.</string>
    <string name="mts_1000">1000 mts.</string>
    <string name="mts_custom">Custom distance.</string>
    <string name="enter_distance">Enter distance in meters</string>
    <string name="distance_tag">Set alarm distance</string>
    <string name="distance_title">Alarm distance</string>
    <string name="min_distance_alert">Distance must be at least 100 mts.</string>
    <string name="max_distance_alert">Distance must be at most 2000 mts.</string>
    <string name="field_required">This field is required.</string>
</resources>
